--- a/public/labs/a1/index.html
+++ b/public/labs/a1/index.html
@@ -225,7 +225,7 @@ Please
 <a href="https://www.lipsum.com">click here</a>
 to get dummy text<br/>
 
-Checkout my <a href="other-page.html">other page</a>
+Checkout my <a href="https://findtheinvisiblecow.com/">other page</a>
 
 </body>
 </html>
